--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
         "imask": "^7.1.3",
         "jquery": "^3.7.1",
         "jsdom": "^22.1.0",
-        "lazy-line-painter": "^2.0.3",
-        "locomotive-scroll": "^5.0.0-beta.11",
+        "locomotive-scroll": "^4.1.4",
         "swiper": "^11.0.6",
         "vivus": "^0.4.6"
     }
