--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "jquery": "^3.7.1",
         "jsdom": "^22.1.0",
         "locomotive-scroll": "^4.1.4",
+        "simplebar": "^6.2.5",
         "swiper": "^11.0.6",
         "vivus": "^0.4.6"
     }
