--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     },
     "dependencies": {
         "gsap": "^3.12.2",
-        "imask": "^7.1.3",
+        "inputmask": "^5.0.8",
         "jquery": "^3.7.1",
         "jsdom": "^22.1.0",
         "locomotive-scroll": "^4.1.4",
